# sammy_monitor

./: .dockerignore  .gitignore  .tool-versions  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  alert_rules.yml  alertmanager.yml  build.sh  docker-compose.ghcr.yml  docker-compose.yml  prometheus.yml  prometheus_rules.yml  settings.sample.toml
.github/workflows/: ci.yml  docker.yml
alertmanager/templates/: email.tmpl
grafana/dashboards/: sammy-monitor-dashboard.json
grafana/provisioning/dashboards/: sammy-monitor.yml
src/: dashboard.rs  lib.rs  main.rs  metrics.rs  monitor_detail.rs  prometheus_client.rs  settings.rs  worker.rs
src/templates/: index.html
templates/: index.html  monitor_detail.html
tests/: integration_metrics_test.rs
