[package]
name = "sammy_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.7"
bytes = "1.10.1"
chrono = { version = "0.4.35", features = ["serde"] }
clap = "4.5"
env_logger = "0.11"
log = "0.4"
metrics = { version = "0.23", default-features = false }
metrics-exporter-prometheus = { version = "0.15", default-features = false }
once_cell = "1.21.3"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "stream", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
tera = "1.20"
