[package]
name = "sammy_monitor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple HTTP monitoring service with Prometheus metrics"
authors = ["Greg Hewett <glh@strand3.com>"]

[lib]
name = "sammy_monitor"
path = "src/lib.rs"

[[bin]]
name = "sammy_monitor"
path = "src/main.rs"

[dependencies]
# Core runtime
anyhow = "1.0"
tokio = { version = "1.36", features = ["full"] }

# Web server
axum = "0.7"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Metrics
metrics = { version = "0.23", default-features = false }
metrics-exporter-prometheus = { version = "0.15", default-features = false }
once_cell = "1.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.6"